--- a/main.css
+++ b/main.css
@@ -45,6 +45,8 @@ body {
   width: 100%;
   font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
+	align-items: center;
+	background-color: #e66465;
 }
 h1 {
   font-size: 3em;
@@ -52,13 +54,13 @@ h1 {
   color: rgba(255, 255, 255, 0.7);
   margin-top: 20px;
 	padding-bottom: 15px;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 .enterTask {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  padding-left: 25px;
-  padding-right: 70px;
+  padding: 0 10px;
 }
 .header {
 	background: linear-gradient(#9198e5, #e66465);
@@ -72,25 +74,23 @@ input {
 	font-family: 'Josefin Sans', sans-serif;
 }
 #myInput {
-  width: 75%;
+  width: 95%;
   font-size: 1.5em;
   border-radius: 3px;
 }
 .addBtn {
-  font-size: 1.5em;
-  border-radius: 3px;
+  font-size: 2.5em;
+  border-radius: 50%;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(224, 224, 235, 0.6);
-  width: 25%;
+  width: 4%;
 	text-align: center;
 	vertical-align: bottom;
-	padding-top: 10px;
-	padding-bottom: 5px;
 	margin-left: 3px;
-  box-shadow: inset 0 0 12px 3px rgba(208, 208, 225, 0.6);
   text-shadow: 1px 2px 4px black;
   font-weight: 500;
 	cursor: pointer;
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 .addBtn:hover {
   box-shadow: inset 0 0 12px 3px rgba(99, 99, 156, 0.5);
@@ -106,29 +106,29 @@ input {
 #myUl {
 	display: flex;
 	flex-flow: column;
-	width: 100%;
 	font-size: 1.7em;
-	margin-left: -20px;
+	width: 90%;
 }
 li {
 	padding-top: 10px;
 	padding-bottom: 5px;
-	padding-left: 25px;
 	border-radius: 3px;
 	cursor: pointer;
-	background-color: #f0f0f5;
 	position: relative;
-	word-spacing: 40px;
+	word-spacing: 10px;
+	font-weight: 200;
   opacity: 1;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+	text-align: center;
+	color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
 }
-li:nth-child(odd) {
-	background-color: white;
-}
+
 li:hover {
 	background-color: #ddd;
 }
 li.checked {
-	background: #888;
 	color: rgba(255, 255, 255, 0.8);
 	text-decoration: line-through;
 	opacity: 0.6;
@@ -137,7 +137,7 @@ li.checked {
 li.checked::before {
 	content: '';
 	position: absolute;
-	border-color: white;
+	border-color: #3366cc;
 	border-style: solid;
 	border-width: 0 2px 2px 0;
 	left: 7px;
@@ -145,6 +145,7 @@ li.checked::before {
 	height: 15px;
 	width: 7px;
 }
+
 .close {
 	position: absolute;
 	right: 5px;
@@ -156,8 +157,24 @@ li.checked::before {
 	color: white;
 }
 
+
 @media (max-width: 738px) {
 	h1 {
 		font-size: 2em;
+	}
+	#myUl {
+		font-size: 1em;
+		margin-left: -20px;
+
+	}
+	.addBtn {
+		width: 15%;
+		margin-right: 15px;
+	}
+	#myInput {
+		width: 70%;
+	}
+	.close {
+		right: 0;
 	}
 }
