--- a/main.css
+++ b/main.css
@@ -46,8 +46,9 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 	align-items: center;
-	background-color: #e66465;
+	background-color: #42ccdb;
 }
+
 h1 {
   font-size: 3em;
   text-align: center;
@@ -63,7 +64,7 @@ h1 {
   padding: 0 10px;
 }
 .header {
-	background: linear-gradient(#9198e5, #e66465);
+	background-color: #42ccdb;
 	width: 100%;
 	text-align: center;
 	padding-bottom: 5px;
@@ -74,16 +75,17 @@ input {
 	font-family: 'Josefin Sans', sans-serif;
 }
 #myInput {
-  width: 95%;
-  font-size: 1.5em;
+  width: 100%;
+  font-size: 2em;
   border-radius: 3px;
 }
 .addBtn {
-  font-size: 2.5em;
-  border-radius: 50%;
+  font-size: 1.7em;
+  border-radius: 20px;
+	margin-top: 30px;
   color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(224, 224, 235, 0.6);
-  width: 4%;
+  background-image: linear-gradient(#e66465, #9198e5);
+  width: 12%;
 	text-align: center;
 	vertical-align: bottom;
 	margin-left: 3px;
@@ -91,10 +93,12 @@ input {
   font-weight: 500;
 	cursor: pointer;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  position: fixed;
+	bottom: 10px;
 }
 .addBtn:hover {
   box-shadow: inset 0 0 12px 3px rgba(99, 99, 156, 0.5);
-  color: rgba(99, 99, 156, 0.9);
+  color: rgba(255, 255, 255, 0.7);
   text-shadow: 1px 2px 4px white;
 }
 .addBtn:active {
@@ -121,8 +125,10 @@ li {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 	text-align: center;
 	color: rgba(0, 0, 0, 0.7);
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: rgba(0, 0, 0, 0.1);
 	border-radius: 5px;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+	box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.4);
 }
 
 li:hover {
@@ -133,7 +139,9 @@ li.checked {
 	text-decoration: line-through;
 	opacity: 0.6;
 	transition: 0.6s;
+	background-color: #b3b3ff;
 }
+
 li.checked::before {
 	content: '';
 	position: absolute;
@@ -156,23 +164,26 @@ li.checked::before {
 	background-color: #f44336;
 	color: white;
 }
-
+.title {
+	padding-right: 10px;
+}
+.date {
+	padding-left: 15px;
+	display: inline-block;
+}
 
 @media (max-width: 738px) {
 	h1 {
 		font-size: 2em;
 	}
 	#myUl {
-		font-size: 1em;
+		font-size: 1.2em;
 		margin-left: -20px;
 
 	}
 	.addBtn {
-		width: 15%;
+		width: 35%;
 		margin-right: 15px;
-	}
-	#myInput {
-		width: 70%;
 	}
 	.close {
 		right: 0;
