--- a/main.css
+++ b/main.css
@@ -46,13 +46,13 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 	align-items: center;
-	background-color: #42ccdb;
+	background-color: rgba(230, 242, 255, 0.9);
 }
 
 h1 {
   font-size: 3em;
   text-align: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: #9198e5;
   margin-top: 20px;
 	padding-bottom: 15px;
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -64,10 +64,11 @@ h1 {
   padding: 0 10px;
 }
 .header {
-	background-color: #42ccdb;
+	background-color: rgba(230, 242, 255, 0.5);
 	width: 100%;
 	text-align: center;
 	padding-bottom: 5px;
+	margin-top: 50px;
 }
 input {
 	border: none;
@@ -80,12 +81,12 @@ input {
   border-radius: 3px;
 }
 .addBtn {
-  font-size: 1.7em;
-  border-radius: 20px;
+  font-size: 4em;
+  border-radius: 50%;
 	margin-top: 30px;
   color: rgba(255, 255, 255, 0.7);
   background-image: linear-gradient(#e66465, #9198e5);
-  width: 12%;
+  width: 5%;
 	text-align: center;
 	vertical-align: bottom;
 	margin-left: 3px;
@@ -94,7 +95,8 @@ input {
 	cursor: pointer;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   position: fixed;
-	bottom: 10px;
+	top: 0;
+	right: 20px;
 }
 .addBtn:hover {
   box-shadow: inset 0 0 12px 3px rgba(99, 99, 156, 0.5);
@@ -125,10 +127,10 @@ li {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 	text-align: center;
 	color: rgba(0, 0, 0, 0.7);
-	background-color: rgba(0, 0, 0, 0.1);
 	border-radius: 5px;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-	box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.4);
+	box-shadow: 2px 3px 3px rgba(26, 136, 255, 0.5);
+	background-color: white;
 }
 
 li:hover {
@@ -182,7 +184,7 @@ li.checked::before {
 
 	}
 	.addBtn {
-		width: 35%;
+		width: 20%;
 		margin-right: 15px;
 	}
 	.close {
