--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ h1 {
   color: #9198e5;
   margin-top: 20px;
 	padding-bottom: 15px;
-	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+	text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.7);
 }
 .enterTask {
   display: flex;
@@ -94,7 +94,7 @@ input {
   font-weight: 500;
 	cursor: pointer;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-  position: fixed;
+  position: absolute;
 	top: 0;
 	right: 20px;
 }
@@ -131,6 +131,8 @@ li {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 	box-shadow: 2px 3px 3px rgba(26, 136, 255, 0.5);
 	background-color: white;
+	display: flex;
+	justify-content: space-between;
 }
 
 li:hover {
@@ -167,10 +169,10 @@ li.checked::before {
 	color: white;
 }
 .title {
-	padding-right: 10px;
+
 }
 .date {
-	padding-left: 15px;
+	padding-right: 45px;
 	display: inline-block;
 }
 
@@ -180,8 +182,7 @@ li.checked::before {
 	}
 	#myUl {
 		font-size: 1.2em;
-		margin-left: -20px;
-
+    margin-left: -30px;
 	}
 	.addBtn {
 		width: 20%;
@@ -189,5 +190,8 @@ li.checked::before {
 	}
 	.close {
 		right: 0;
+	}
+	.date {
+		padding-right: 25px;
 	}
 }
