--- a/main.css
+++ b/main.css
@@ -43,16 +43,16 @@ body {
   display: flex;
   flex-flow: column;
   width: 100%;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Jomolhari', serif;
 	box-sizing: border-box;
 	align-items: center;
-	background-color: rgba(89, 0, 179, 0.8);
+	background-color: rgba(240, 240, 245, 0.5);
 }
 
 h1 {
   font-size: 3em;
   text-align: center;
-  color: #9198e5;
+  color: #00b38f;
   margin-top: 20px;
 	padding-bottom: 15px;
 	text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.9);
@@ -64,7 +64,6 @@ h1 {
   padding: 0 10px;
 }
 .header {
-	background-color: rgba(89, 0, 179, 0);
 	width: 100%;
 	text-align: center;
 	padding-bottom: 5px;
@@ -83,25 +82,27 @@ input {
 #myInput {
   width: 100%;
   font-size: 2em;
-  border-radius: 3px;
+  border-radius: 25px;
+	background-color: #ebf0fa;
 }
 .addBtn {
   font-size: 4em;
   border-radius: 50%;
-	margin-top: 30px;
+	margin-top: 25px;
   color: rgba(255, 255, 255, 0.7);
-  background-image: linear-gradient(#66ccff, #9198e5);
+  background-image: linear-gradient(#66ffcc, #33cccc);
   width: 5%;
 	text-align: center;
 	vertical-align: bottom;
 	margin-left: 3px;
   text-shadow: 1px 2px 4px black;
-  font-weight: 500;
+  font-weight: 300;
+	padding-bottom: 3px;
 	cursor: pointer;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-  position: absolute;
-	top: 0;
-	right: 20px;
+  position: fixed;
+	z-index: 3;
+	bottom: 10px;
 }
 .addBtn:hover {
   box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.5);
@@ -109,7 +110,7 @@ input {
   text-shadow: 3px 4px 5px black;
 }
 .addBtn:active {
-  box-shadow: inset 0 0 12px 3px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 0 12px 3px rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.8);
   text-shadow: 3px 4px 7px white;
   font-weight: 600;
@@ -121,20 +122,19 @@ input {
 	width: 90%;
 }
 li {
-	padding-top: 10px;
-	padding-bottom: 5px;
+	padding: 10px 50px;
 	border-radius: 3px;
 	cursor: pointer;
 	position: relative;
 	word-spacing: 10px;
 	font-weight: 200;
   opacity: 1;
+	margin-bottom: 15px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 	text-align: center;
-	color: rgba(0, 0, 0, 0.7);
-	border-radius: 5px;
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-	box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
+	color: rgba(0, 0, 0, 0.6);
+	border-radius: 25px;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 	background-color: white;
 	display: flex;
 	justify-content: space-between;
@@ -144,11 +144,10 @@ li:hover {
 	background-color: #ddd;
 }
 li.checked {
-	color: rgba(0, 0, 0, 0.2);
+	color: rgba(0, 0, 0, 0.3);
 	text-decoration: line-through;
 	opacity: 0.6;
 	transition: 0.5s;
-	background-color: #b3b3ff;
 }
 
 li.checked::before {
@@ -157,7 +156,8 @@ li.checked::before {
 	border-color: #3366cc;
 	border-style: solid;
 	border-width: 0 2px 2px 0;
-	left: 7px;
+	left: 20px;
+	top: 15px;
 	transform: rotate(45deg);
 	height: 15px;
 	width: 7px;
@@ -168,6 +168,7 @@ li.checked::before {
 	right: 5px;
 	top: 0px;
 	padding: 10px 10px;
+	border-radius: 10px;
 }
 .close:hover {
 	background-color: #f44336;
@@ -177,8 +178,7 @@ li.checked::before {
 
 }
 .date {
-	padding-right: 45px;
-	display: inline-block;
+
 }
 
 @media (max-width: 738px) {
@@ -187,20 +187,21 @@ li.checked::before {
 	}
 	#myUl {
 		font-size: 1.3em;
-    margin-left: -30px;
+    margin-left: -10px;
 	}
 	#myInput {
 		width: 80%;
+		margin-left: 15px;
 	}
 	.header {
 		margin-left: 40px;
 	}
 	h1 {
-		margin-left: -80px;
+		margin-left: -50px;
 	}
 	.addBtn {
-		width: 20%;
-		right: 25px;
+	width: 22%;
+	right: 40%;
 	}
 	.close {
 		right: 0;
