--- a/main.css
+++ b/main.css
@@ -224,14 +224,16 @@ right: 30px;
    right: 8px;
    font-size: 1.5em;
 	 width: 10%;
-	 top: 55px;
+	 top: 57px;
+	 padding-bottom: 5px;
+	 padding-top: 3px;
 	}
 	.close {
 		right: 0;
 	}
 
 	.date {
-   right: -5px;
+   right: 5px;
 	}
 	.update {
 		right: 25px;
