--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ li {
 	padding: 10px 50px 10px 10px;
 	cursor: pointer;
 	position: relative;
-	word-spacing: 10px;
+	word-spacing: 7px;
 	font-weight: 200;
   opacity: 1;
 	margin-bottom: 15px;
@@ -151,7 +151,7 @@ li {
 	justify-content: space-between;
 }
 
-li:hover {
+input:hover {
 	background-color: #ddd;
 }
 li.checked {
@@ -201,6 +201,15 @@ font-size: 0.5em;
 position: relative;
 top: 10px;
 right: 30px;
+}
+.task {
+	font-size: 1em;
+	width: 90%;
+	border-radius: 20px;
+	background-color: white;
+}
+input {
+	outline: none;
 }
 
 @media (max-width: 738px) {
